// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Carousel Playground 1`] = `
<div
  style={
    Object {
      "height": "250px",
      "padding": "2rem",
      "width": "50%",
    }
  }
>
  <div
    className="Carousel__CarouselWrapper-sc-19rb187-4 eXyKLP"
  >
    <div
      className="Carousel__CarouselComponent-sc-19rb187-1 MKvIP"
    >
      <div
        className="Carousel__CarouselContainer-sc-19rb187-2 gyIlwN"
      >
        <div
          className="Carousel__CarouselSlidesContainer-sc-19rb187-3 kOGYYh"
        >
          <div
            className="Slide__StyledSlideContainer-sc-1lch2cn-0 bdISsf"
          >
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 kCcine"
              height="100%"
              opacity="1"
              width="100%"
            />
          </div>
          <div
            className="Slide__StyledSlideContainer-sc-1lch2cn-0 bdISsf"
          >
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 kCcine"
              height="100%"
              opacity="1"
              width="100%"
            />
          </div>
          <div
            className="Slide__StyledSlideContainer-sc-1lch2cn-0 bdISsf"
          >
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 kCcine"
              height="100%"
              opacity="1"
              width="100%"
            />
          </div>
          <div
            className="Slide__StyledSlideContainer-sc-1lch2cn-0 bdISsf"
          >
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 kCcine"
              height="100%"
              opacity="1"
              width="100%"
            />
          </div>
          <div
            className="Slide__StyledSlideContainer-sc-1lch2cn-0 bdISsf"
          >
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 kCcine"
              height="100%"
              opacity="1"
              width="100%"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Carousel With Thumbnails Enabled 1`] = `
<div
  style={
    Object {
      "height": "250px",
      "padding": "2rem",
      "width": "50%",
    }
  }
>
  <div
    className="Carousel__CarouselWrapper-sc-19rb187-4 vjaO"
  >
    <div
      className="Carousel__CarouselComponent-sc-19rb187-1 MKvIP"
    >
      <div
        className="Carousel__CarouselContainer-sc-19rb187-2 gyIlwN"
      >
        <div
          className="Carousel__CarouselSlidesContainer-sc-19rb187-3 kOGYYh"
        >
          <div
            className="Slide__StyledSlideContainer-sc-1lch2cn-0 bdISsf"
          >
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 kCcine"
              height="100%"
              opacity="1"
              width="100%"
            />
          </div>
          <div
            className="Slide__StyledSlideContainer-sc-1lch2cn-0 bdISsf"
          >
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 kCcine"
              height="100%"
              opacity="1"
              width="100%"
            />
          </div>
          <div
            className="Slide__StyledSlideContainer-sc-1lch2cn-0 bdISsf"
          >
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 kCcine"
              height="100%"
              opacity="1"
              width="100%"
            />
          </div>
          <div
            className="Slide__StyledSlideContainer-sc-1lch2cn-0 bdISsf"
          >
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 kCcine"
              height="100%"
              opacity="1"
              width="100%"
            />
          </div>
          <div
            className="Slide__StyledSlideContainer-sc-1lch2cn-0 bdISsf"
          >
            <i
              className="Skeleton__StyledSkeleton-imrnkm-0 kCcine"
              height="100%"
              opacity="1"
              width="100%"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="Carousel__ThumbsContainer-sc-19rb187-5 fsjLFx"
    >
      <div
        className="Carousel__Thumbs-sc-19rb187-6 bLZzjH"
      >
        <div
          className="Thumbnails__StyledThumbContainer-sc-1tm7kn0-0 cnzhQR"
        >
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 kCcine"
            height="100%"
            opacity="1"
            width="100%"
          />
        </div>
        <div
          className="Thumbnails__StyledThumbContainer-sc-1tm7kn0-0 cnzhQR"
        >
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 kCcine"
            height="100%"
            opacity="1"
            width="100%"
          />
        </div>
        <div
          className="Thumbnails__StyledThumbContainer-sc-1tm7kn0-0 cnzhQR"
        >
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 kCcine"
            height="100%"
            opacity="1"
            width="100%"
          />
        </div>
        <div
          className="Thumbnails__StyledThumbContainer-sc-1tm7kn0-0 cnzhQR"
        >
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 kCcine"
            height="100%"
            opacity="1"
            width="100%"
          />
        </div>
        <div
          className="Thumbnails__StyledThumbContainer-sc-1tm7kn0-0 cnzhQR"
        >
          <i
            className="Skeleton__StyledSkeleton-imrnkm-0 kCcine"
            height="100%"
            opacity="1"
            width="100%"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
